--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="en">
 
 <head>
+    <!--Font Awesone CDN-->
+    <script src="https://kit.fontawesome.com/271acc1a25.js" crossorigin="anonymous"></script>
     <!--Getting BootStrap through CDN-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -14,42 +16,82 @@
     <title>Mind-ID</title>
     <link rel="stylesheet" href="styles/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu:wght@500&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
+
+    <!--NAVBAR-->
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
+        <a class="navbar-brand" href="#"><img class="logo-img" src="images/logo-solid.jpg" alt="logo"></a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Pricing</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Clients</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <section class="title">
-        <!--NAVBAR-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <a class="navbar-brand" href="#"><img class="logo-img" src="images/logo.png" alt="logo"></a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">About </a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Clients</a>
-                    </li>
-                </ul>
+        <div class="container-fluid">
+            <div class="row">
+                <div class="col-lg-6 heading">
+                    <h1>The state of the art <br>
+                        in authentication.</h1>
+
+                    <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
+                    <button type="button" class="btn btn-primary btn-lg" id="win-button"><i class="fab fa-windows"></i>
+                        Download</button>
+
+                </div>
+                <div class="col-lg-6">
+                    <img class="brainImg" src="images/brain-removebg-preview.png" alt="img1">
+                </div>
             </div>
-        </nav>
-        <div class="row">
-            <div class="col-lg-6 heading">
-                <h1>The state of the art <br>
-                    in authentication</h1>
-            </div>
-            <div class="col-lg-6">
-                <img class="brainImg" src="images/brain-removebg-preview.png" alt="img1">
-            </div>
+
         </div>
     </section>
+
+
+    <!-- Features -->
+
+    <section id="features">
+
+        <div class="row">
+
+            <div class="feature-box col-lg-4">
+                <i class="fas fa-shield-alt fa-4x"></i>
+                <h3>Unforgeable</h3>
+                <p>Impossible to replicate.</p>
+
+            </div>
+            <div class="feature-box col-lg-4">
+                <i class="fas fa-user-check fa-4x"></i>
+                <h3>Highly Accurate</h3>
+                <p>Accuracy exceeding 99.9%.</p>
+            </div>
+            <div class="feature-box col-lg-4">
+                <i class="fas fa-cloud-upload-alt fa-4x"></i>
+                <h3>Cloud Based</h3>
+                <p>Data storage and computations on cloud server.</p>
+            </div>
+        </div>
+
+    </section>
+
 
     <!--jQuery and PopperJS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
