refactoring & logo change

--- a/index.html
+++ b/index.html
@@ -24,33 +24,38 @@
 
 
     <!--NAVBAR-->
-    <nav class="navbar fixed-top navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"><img class="logo-img" src="images/logo-solid.jpg" alt="logo"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav ml-auto">
-                <li class="nav-item">
-                    <a class="nav-link" href="#">About </a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Pricing</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Clients</a>
-                </li>
-            </ul>
-        </div>
-    </nav>
 
-    <section class="title">
-        <div class="container-fluid">
+    <section id="title">
+
+        <div class="top-cont container-fluid">
+
+
+            <nav class="navbar navbar-expand-lg ">
+                <a class="navbar-brand" href="#"><img class="logo-img" src="images/new_logo-removebg-preview.png"
+                        alt="logo"></a>
+                <button class="navbar-toggler" type="button" data-toggle="collapse"
+                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item">
+                            <a class=" nav-link" href="#">About </a>
+                        </li>
+                        <li class="nav-item">
+                            <a class=" nav-link" href="#">Pricing</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class=" nav-link" href="#" style="padding-right: 200px;">Clients</a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
             <div class="row">
                 <div class="col-lg-6 heading">
-                    <h1>The state of the art <br>
-                        in authentication.</h1>
+                    <h1>State of the art authentication.</h1>
 
                     <button type="button" class="btn btn-dark btn-lg"><i class="fab fa-apple"></i> Download</button>
                     <button type="button" class="btn btn-primary btn-lg" id="win-button"><i class="fab fa-windows"></i>
@@ -90,6 +95,11 @@
             </div>
         </div>
 
+    </section>
+
+    <!--Testimonials-->
+    <section id="testimonials">
+        <div></div>
     </section>
 
 
